--- a/App/src/main/res/values/colors.xml
+++ b/App/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="wirte">#ffffff</color>
+    <color name="main">#7184ff</color>
+    <color name="text_c">#6a6a6a</color>
+    <color name="black">#000000</color>
 </resources>
