--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -1,11 +1,31 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+
+
+    <style name="horizontal_black_line_small_login">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_small</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/wirte</item>
+    </style>
+
+
+    <style name="beautiful_dialog" parent="android:style/Theme.Dialog">
+    <item name="android:windowFrame">@null</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="android:windowBackground">@drawable/transpant_bg</item>
+    <item name="android:windowIsFloating">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+
 
 </resources>
