--- a/App/src/main/res/drawable/button_two.xml
+++ b/App/src/main/res/drawable/button_two.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:drawable="@mipmap/clue_icon_pre"/>
-    <item android:state_checked="false" android:drawable="@mipmap/index_icon_clue"/>
+    <item android:state_checked="true" android:drawable="@mipmap/icon_data_pre"/>
+    <item android:state_checked="false" android:drawable="@mipmap/index_icon_log"/>
 
 </selector>
