--- a/App/src/main/res/layout/activity_map_navg.xml
+++ b/App/src/main/res/layout/activity_map_navg.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qianbai.newexs.BaseActivity">
+    tools:context="com.qianbai.newexg.MapNavgActivity">
 
 </android.support.constraint.ConstraintLayout>
