--- a/App/src/main/res/values/colors.xml
+++ b/App/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="main">#7184ff</color>
     <color name="text_c">#6a6a6a</color>
     <color name="black">#000000</color>
+    <color name="background">#f5f6f8</color>
+    <color name="edit">#cdcdcd</color>
+    <color name="color_00">#3e3e3e3e</color>
+
 </resources>
