--- a/App/src/main/res/values/dimens.xml
+++ b/App/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_horizontal_marginx">70dp</dimen>
-    <dimen name="activity_horizontal_margins">35dp</dimen>
+    <dimen name="activity_horizontal_margins">30dp</dimen>
     <dimen name="activity_horizontal_marginsx">50dp</dimen>
     <dimen name="activity_horizontal_marginss">100dp</dimen>
     <dimen name="layout_padding">12dp</dimen>
@@ -18,4 +18,6 @@
     <dimen name="small">10sp</dimen>
     <dimen name="title">22sp</dimen>
     <dimen name="title_size">18sp</dimen>
+    <dimen name="list_line">10dp</dimen>
+    <dimen name="default_divider_padding">4dp</dimen>
 </resources>
