--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -18,6 +18,24 @@
     </style>
 
 
+    <style name="horizontal_black_line_small">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_small</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+    </style>
+
+
+    <style name="horizontal_list_line_bag">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_large</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/background</item>
+    </style>
+
+
     <style name="beautiful_dialog" parent="android:style/Theme.Dialog">
     <item name="android:windowFrame">@null</item>
     <item name="android:windowNoTitle">true</item>
@@ -25,6 +43,16 @@
     <item name="android:windowIsFloating">true</item>
     <item name="android:windowContentOverlay">@null</item>
     </style>
+
+
+
+    <style name="horizontal_black_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_large</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/background</item>
+    </style>
+
 
 
 
