--- a/App/src/main/res/layout/fragment_one.xml
+++ b/App/src/main/res/layout/fragment_one.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-
-
-
-        <LinearLayout
-            style="@style/horizontal_black_line"
-            android:visibility="gone" />
 
 
         <RelativeLayout
@@ -101,6 +87,14 @@
 
         </RelativeLayout>
 
+
+    <LinearLayout
+        android:id="@+id/layout_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="210dp"
+        >
 
 
         <LinearLayout
@@ -196,7 +190,11 @@
         </LinearLayout>
 
 
+
     </LinearLayout>
 
 
-</LinearLayout>
+
+
+
+</RelativeLayout>
