--- a/App/src/main/res/layout/loading_my_layout.xml
+++ b/App/src/main/res/layout/loading_my_layout.xml
@@ -7,53 +7,59 @@
     >
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/main"
-        android:text="提示"
-        android:gravity="center"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:id="@+id/tv_dialog_title" />
-
-
-    <TextView
         android:id="@+id/tv_dialog_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/main"
+        android:textColor="@color/black_text"
+        android:textSize="@dimen/title"
         android:text="这个是个重要的提示"
         android:gravity="center"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:textStyle="bold"
+        android:layout_margin="@dimen/activity_horizontal_margina"
         />
+
+    <LinearLayout
+        style="@style/horizontal_black_line_small"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        ></LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:orientation="horizontal"
         >
 
         <Button
             android:id="@+id/btn_dia_no"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:background="@drawable/bg_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="取消"
-            android:textColor="@color/wirte"
+            android:textColor="@color/btn_text_color"
+            android:layout_weight="1"
+            android:background="@null"
+            android:textSize="@dimen/title_size"
+            android:layout_margin="@dimen/line_large"
             />
+
+        <LinearLayout
+            style="@style/vertical_black_line_small"></LinearLayout>
 
         <Button
             android:id="@+id/btn_dia_ok"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:background="@drawable/bg_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="确定"
-            android:textColor="@color/wirte"
+            android:textColor="@color/btn_text_color"
+            android:layout_weight="1"
+            android:background="@null"
+            android:textSize="@dimen/title_size"
+            android:layout_margin="@dimen/line_large"
             />
     </LinearLayout>
 
