--- a/App/src/main/res/values/colors.xml
+++ b/App/src/main/res/values/colors.xml
@@ -2,13 +2,18 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="btn_text_color">#0077ff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="wirte">#ffffff</color>
     <color name="main">#7184ff</color>
     <color name="text_c">#6a6a6a</color>
     <color name="black">#000000</color>
+    <color name="black_text">#0a0a0a</color>
     <color name="background">#f5f6f8</color>
     <color name="edit">#cdcdcd</color>
     <color name="color_00">#3e3e3e3e</color>
+    <color name="main_gray">#8394fe</color>
+    <color name="top_bg_color">#FFF</color>
+
 
 </resources>
