--- a/App/src/main/res/values/dimens.xml
+++ b/App/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margina">25dp</dimen>
     <dimen name="activity_horizontal_marginx">70dp</dimen>
     <dimen name="activity_horizontal_margins">30dp</dimen>
     <dimen name="activity_horizontal_marginsx">50dp</dimen>
