--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -27,6 +27,13 @@
         <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
     </style>
 
+    <style name="vertical_black_line_small">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:background">@color/background</item>
+    </style>
+
 
     <style name="horizontal_list_line_bag">
         <item name="android:layout_width">match_parent</item>
